[package]
name = "four_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
discv5 = "0.6.0"
tokio = { version = "1", features = ["full"] }
# used for dht
sha2 = "0.9.5"
hex = "0.4.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
crossbeam-channel = "0.5.1"
rand = { version = "0.8", package = "rand" }
#discv-5
tracing = { version = "0.1", features = ["log"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }